# VRCOSC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.manifest  homepage.cpp  homepage.h  lighthouse_service.cpp  lighthouse_service.h  lighthouse_types.h  lighthousepage.cpp  lighthousepage.h  main.cpp  mainwindow.cpp  mainwindow.h  openhw_helper.cpp  openhw_helper.manifest  openhw_helper.rc  openhw_ipc.h  oscsettingspage.cpp  oscsettingspage.h  settingspage.cpp  settingspage.h  steamvr_monitor_service.cpp  steamvr_monitor_service.h
openhw_bridge/: OpenHardwareMonitorBridge.cpp  OpenHardwareMonitorBridge.vcxproj
